<resources>
    <string name="app_name">PatientTrackerApp</string>

    <string name="app_header">Take Care</string>
    <string name="username_hint">Enter a username...</string>
    <string name="password_hint">Enter a password...</string>

    <string name="doctor">DOCTOR</string>
    <string name="patient">PATIENT</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>

    <string name="score">Current Health Score : </string>

    <string name="signin">SIGN IN</string>

    <string name="save">SAVE</string>
    <string name="sos">SOS</string>

    <string name="nav_open">Navigation Drawer Open</string>
    <string name="nav_close">Navigation Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">Forget Password</string>
    <string name="personimage">personImage</string>


</resources>