<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity2"
    android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="100dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:layout_centerHorizontal="true"
        android:hint="QUESTION"
        android:layout_marginBottom="100dp"
        style="@style/FormQuestion"
        android:layout_centerInParent="true"/>
</RelativeLayout>


    <Button
        android:id="@+id/ans_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/one"
        android:layout_marginBottom="15dp"
        style="@style/TextInput"/>

    <Button
        android:id="@+id/ans_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/two"
        android:layout_marginBottom="15dp"
        style="@style/TextInput"/>

    <Button
        android:id="@+id/ans_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/three"
        android:layout_marginBottom="15dp"
        style="@style/TextInput"/>

    <Button
        android:id="@+id/ans_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/four"
        android:layout_marginBottom="15dp"
        style="@style/TextInput"/>

    <Button
        android:id="@+id/ans_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/five"
        android:layout_marginBottom="15dp"

        style="@style/TextInput"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_btn"
        android:text="@string/save"
        android:background="@color/cardview_dark_background"
        style="@style/TextInput" />


</LinearLayout>