<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="horizontal"
    tools:context=".RoleSelectionActivity"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App_Header"
        android:text="@string/app_header"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-220dp"
        android:gravity="center"/>


    <TextView
        style="@style/SelectRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/doctor_role"
        android:layout_marginBottom="20dp"
        android:text="Select Login Role!"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doctor_role"
        android:text="@string/doctor"
        style="@style/TextInput"
        android:background="@drawable/custom_button"
        android:width="200dp"
        android:height="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/patient_role"
        android:text="@string/patient"
        android:layout_marginLeft="10dp"
        style="@style/TextInput"
        android:background="@drawable/custom_button"
        android:width="200dp"
        android:height="200dp"
        android:layout_toRightOf="@+id/doctor_role"/>

</RelativeLayout>