<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/login_header"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/applogo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/forget_password"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="120dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">
            <ImageView
                android:contentDescription="@string/personimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_person"
                tools:ignore="HardcodedText" />
            <EditText
                android:id="@+id/forgetPasswordIdentityNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Identity Number"
                android:paddingStart="5dp"
                android:background="@drawable/custom_edittext"
                />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgetPasswordIdentityNumber"
                android:id="@+id/loading"
                android:layout_marginTop="35dp"
                android:background="@color/transparent"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/forgetPasswordButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_button"
                android:onClick="sendPassword"
                android:textColor="@color/white"
                android:text="Send Password"
                />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>